<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.CardView
            android:id="@+id/genresCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            app:cardCornerRadius="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="60dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/trackName"
                    android:layout_width="250dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:ellipsize="middle"
                    android:contentDescription="@string/artist_name"
                    android:gravity="center_vertical"
                    android:textSize="18sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginRight="10dp"
                        android:gravity="end|center_vertical"
                        android:orientation="horizontal">

                        <CheckBox
                            android:id="@+id/like"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="10dp"
                            android:contentDescription="@string/add_remove_favorite_image"
                            android:button="@drawable/like_button"
                            android:checked="false"/>

                        <ImageView
                            android:id="@+id/playPause"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:contentDescription="@string/play_pause_image"
                            android:src="@drawable/play" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>
</layout>